--- a/kevinchavez_exam.ipynb
+++ b/kevinchavez_exam.ipynb
@@ -532,8 +532,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5898a1cb-53aa-4822-9e56-7bc6473e998a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3 as db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "179c9b07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = db.connect('pivot_table.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1c754643",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cn = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "00a367c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x24bf11abec0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cn.execute(\"CREATE TABLE pivot_table (id INTEGER PRIMARY KEY, spend NVARCHAR(50), attributed_rev NVARCHAR(50))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f5195c64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('employees',), ('pivot_table',)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cn.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+    "print(cn.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "52a5791f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = db.connect('pivot_table.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "92be7f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test_data = pd.read_sql_query('select * from pivot_table', con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "17be42d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>firstname</th>\n",
+       "      <th>lastname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [id, firstname, lastname]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0be92b81",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -541,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c6088c",
+   "id": "be4317d4",
    "metadata": {},
    "outputs": [],
    "source": []
